--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
 
     <script>
-        const CLIENT_ID = 'YOUR_GOOGLE_CLIENT_ID'; // Replace with your client ID
-        const API_KEY = 'YOUR_GOOGLE_API_KEY'; // Replace with your API key
+        const CLIENT_ID = '356137219875-f0mgc2oa1jrdqgb4kjoq5aq8a4ci6be7.apps.googleusercontent.com'; // Replace with your client ID
+        const API_KEY = 'AIzaSyDRvpjGaSmvZjag7KnayhyGfX9vmjb3hLc'; // Replace with your API key
         const DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"];
         const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 
